docs/7.52/md/abapprint-control_shortref.md
---
title: "PRINT-CONTROL - Quick reference"
description: |
  Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control.htm) Syntax PRINT-CONTROL    INDEX-LINE index_line    formatsFUNCTION code LINE line POSITION col . Effect Creates index entries for list archiving or sets a print format (ob
version: "7.52"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control_shortref.htm"
abapFile: "abapprint-control_shortref.htm"
keywords: ["insert", "do", "if", "abapprint", "control", "shortref"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_shortref.htm) →  P

PRINT-CONTROL - Quick reference

[Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control.htm)

Syntax

PRINT-CONTROL   { INDEX-LINE index\_line }
              *|* *{* formats*|**{*FUNCTION code*}*
                  *\[*LINE line*\]* *\[*POSITION col*\]* *}*.

Effect

Creates index entries for list archiving or sets a print format (obsolete).

Additions

-   [INDEX-LINE index\_line](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control.htm)
    Inserts the content of index\_line as an index line into the current spool list.
    
-   Obsolete: [formats](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control_obsolete.htm)
    Predefined print formats for print control codes.
    
-   Obsolete: [FUNCTION code](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control_obsolete.htm)
    Specifies print control codes directly in code.
    
-   Obsolete: [*\[*LINE line*\]* *\[*POSITION col*\]*](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapprint-control_obsolete.htm)
    Sets the print format starting from the list line specified in line and position specified in col.